Fix chat overflow on mobile

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -12,6 +12,7 @@
   .chatContainer {
     width: 100%;
     min-width: 100%;
+    overflow: auto;
     border-left: unset;
   }
 }
@@ -72,8 +73,8 @@
 }
 
 .messagesContainer {
-  overflow-y: auto;
   height: 100%;
+  overflow-y: auto;
   padding: var(--s-4);
 }
 
